# ai-python-vite

./: baking.md  main.py  pyproject.toml
backend/: .env  main.py  pyproject.toml
backend/core/: config.py
backend/models/: retriever.py  workout.py
backend/routers/: analysis.py  assistant.py  email.py  firstAI.py
backend/schemas/: workout.py
frontend/: .cta.json  README.md  package.json
frontend/src/: routeTree.gen.ts
frontend/src/components/: Header.tsx
frontend/src/integrations/tanstack-query/: root-provider.tsx
frontend/src/routes/: analysis.tsx  index.tsx
notes/: AI Agent.md  AI Prompts.md  path.md  python.md
